--- a/docs/modules/ROOT/pages/quarkus-roq-frontmatter.adoc
+++ b/docs/modules/ROOT/pages/quarkus-roq-frontmatter.adoc
@@ -29,6 +29,4 @@ For instance, with Maven, add the following dependency to your POM file:
 [[extension-configuration-reference]]
 == Extension Configuration Reference
 
-include::_includes/quarkus-roq-frontmatter_quarkus.roq.adoc[leveloffset=+1, opts=optional]
-
-include::_includes/quarkus-roq-frontmatter_roq.site.adoc[leveloffset=+1, opts=optional]
+include::_includes/quarkus-roq-frontmatter_site.adoc[leveloffset=+1, opts=optional]
