--- a/blog/content/docs/plugins.adoc
+++ b/blog/content/docs/plugins.adoc
@@ -1,8 +1,8 @@
 = Plugins
-include::_includes/attributes.adoc[]
+include::../../includes/attributes.adoc[]
 :doc-name: plugins
 
-include::_includes/edit-contrib.adoc[]
+include::../../includes/edit-contrib.adoc[]
 
 [#plugin-tagging]
 == Roq Plugin Tagging (Tags)
@@ -126,7 +126,7 @@ TIP: you can also use the `:qute:` Asciidoc header attribute to enable Qute pars
 
 === Asciidoc includes
 
-You may use includes normally, just make sure the included file is ignored by Roq by prefixing the file or the directory with `_`.
+You may use includes files from all the site directory. Just make sure the included file is ignored by Roq by prefixing the file or the directory with `_`.
 [source,asciidoc]
 ----
 \include::_includes/attributes.adoc[]
