--- a/blog/includes/configs/quarkus-roq-plugin-diagram_quarkus.adoc
+++ b/blog/includes/configs/quarkus-roq-plugin-diagram_quarkus.adoc
@@ -26,7 +26,7 @@ Environment variable: `+++QUARKUS_ENABLED+++`
 endif::add-copy-button-to-env-var[]
 --
 |boolean
-|`true`
+|`+++true+++`
 
 a|icon:lock[title=Fixed at build time] [[quarkus-roq-plugin-diagram_quarkus-image-name]] [.property-path]##link:#quarkus-roq-plugin-diagram_quarkus-image-name[`quarkus.image-name`]##
 ifdef::add-copy-button-to-config-props[]
@@ -52,7 +52,7 @@ Environment variable: `+++QUARKUS_IMAGE_NAME+++`
 endif::add-copy-button-to-env-var[]
 --
 |string
-|`yuzutech/kroki:0.28.0`
+|`+++yuzutech/kroki:0.28.0+++`
 
 |===
 
