--- a/blog/includes/configs/quarkus-roq-plugin-tagging.adoc
+++ b/blog/includes/configs/quarkus-roq-plugin-tagging.adoc
@@ -26,7 +26,7 @@ Environment variable: `+++QUARKUS_ROQ_TAGGING_LOWERCASE+++`
 endif::add-copy-button-to-env-var[]
 --
 |boolean
-|`false`
+|`+++false+++`
 
 |===
 
