--- a/blog/content/posts/2025-08-26-major-site-migrations/index.adoc
+++ b/blog/content/posts/2025-08-26-major-site-migrations/index.adoc
@@ -1,4 +1,4 @@
-= Major Site Migrations Roq
+= Major site migrations to Roq
 ia3andy
 :description: ✨ Two prominent websites have just migrated to Roq—any guesses who they might be?
 :image: https://images.unsplash.com/photo-1658220068838-90ac25ac8166?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
